get add house with queries included
